--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -9,29 +9,32 @@ on:
   workflow_dispatch:
 
 env:
-  CLUSTER_STAGE:          stage-app-presente
-  CLUSTER_STAGE_ZONE:     us-west1-a
-  PROJECT_ID_STAGE:       app-chamada-stage          # cluster stage
-  NAMESPACE_STAGE:        stage-app-presente
-
-  CLUSTER_PROD:           app-prod-fa395f7c
-  CLUSTER_PROD_ZONE:      us-central1-a
-  PROJECT_ID_PROD:        app-chamada-5706           # cluster prod
-  NAMESPACE_PROD:         app-chamada-production
-
-  DEPLOYMENT_NAME:        app-presente-front
-  DOCKER_IMAGE:           guilherme310402/app_presente_front
+  # ── Cluster Stage ────────────────────────────────────────────────
+  CLUSTER_STAGE:       stage-app-presente
+  CLUSTER_STAGE_ZONE:  us-west1-a
+  PROJECT_ID_STAGE:    app-chamada-stage
+  NAMESPACE_STAGE:     stage-app-presente
+  # ── Cluster Prod ────────────────────────────────────────────────
+  CLUSTER_PROD:        app-prod-fa395f7c
+  CLUSTER_PROD_ZONE:   us-central1-a
+  PROJECT_ID_PROD:     app-chamada-5706
+  NAMESPACE_PROD:      app-chamada-production
+  # ── Comum ───────────────────────────────────────────────────────
+  DEPLOYMENT_NAME:     app-presente-front
+  DOCKER_IMAGE:        guilherme310402/app_presente_front
 
 jobs:
 # ───────────────────────────────────────────────────────────────────
-# 1) TESTE
+# 1) TESTES
 # ───────────────────────────────────────────────────────────────────
   test:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
       - uses: actions/setup-node@v4
-        with: { node-version: 18, cache: npm }
+        with:
+          node-version: 18
+          cache: npm
       - run: npm ci
       - run: npm run lint
       - run: npm test
@@ -43,29 +46,42 @@ jobs:
     needs: test
     runs-on: ubuntu-latest
     outputs:
-      image_tag: ${{ steps.meta.outputs.image_tag }}
+      image_tag: ${{ steps.prep.outputs.tag }}
     steps:
       - uses: actions/checkout@v4
+
+      # 2.1 – Preparar tag da imagem
+      - name: Prepare image tag
+        id: prep
+        run: echo "tag=${GITHUB_SHA::8}" >> "$GITHUB_OUTPUT"
+
+      # 2.2 – Set up Node para o build local (se o Dockerfile precisar)
       - uses: actions/setup-node@v4
-        with: { node-version: 18, cache: npm }
+        with:
+          node-version: 18
+          cache: npm
       - run: npm ci
       - run: npm run build
         env:
           NEXT_PUBLIC_API_URL: ${{ secrets.NEXT_PUBLIC_API_URL }}
 
-      # Faz login no Docker Hub
-      - name: Docker Hub login
-        run: echo "${{ secrets.DOCKERHUB_TOKEN }}" | \
-             docker login -u "${{ secrets.DOCKERHUB_USERNAME }}" --password-stdin
+      # 2.3 – Docker Buildx + Login
+      - uses: docker/setup-buildx-action@v3
+      - uses: docker/login-action@v3
+        with:
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
 
-      # Build & push
-      - id: meta
-        run: |
-          TAG=${GITHUB_SHA::8}
-          docker build --no-cache -t $DOCKER_IMAGE:$TAG -t $DOCKER_IMAGE:latest .
-          docker push $DOCKER_IMAGE:$TAG
-          docker push $DOCKER_IMAGE:latest
-          echo "image_tag=$TAG" >> $GITHUB_OUTPUT
+      # 2.4 – Build + Push
+      - uses: docker/build-push-action@v5
+        with:
+          context: .
+          push: true
+          tags: |
+            ${{ env.DOCKER_IMAGE }}:${{ steps.prep.outputs.tag }}
+            ${{ env.DOCKER_IMAGE }}:latest
+          cache-from: type=gha
+          cache-to:   type=gha,mode=max
 
 # ───────────────────────────────────────────────────────────────────
 # 3) DEPLOY STAGE (branch dev)
@@ -75,7 +91,6 @@ jobs:
     needs: build
     runs-on: ubuntu-latest
     steps:
-      # auth no projeto de stage
       - uses: google-github-actions/auth@v2
         with:
           credentials_json: ${{ secrets.GCP_CREDENTIALS_JSON_STAGE }}
